--- a/src/main/resources/FXMLAddTransaction.fxml
+++ b/src/main/resources/FXMLAddTransaction.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,50 +17,56 @@
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane>
-         <top>
-            <Label prefHeight="18.0" prefWidth="86.0" text="Add Transaction" BorderPane.alignment="CENTER" />
-         </top>
-         <right>
-            <GridPane prefHeight="338.0" prefWidth="640.0" BorderPane.alignment="CENTER">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <RadioButton mnemonicParsing="false" text="Programmed Transaction" GridPane.columnIndex="1" />
-                  <RadioButton mnemonicParsing="false" text="Instant Transaction" GridPane.columnIndex="2" />
-                  <Label prefHeight="18.0" prefWidth="152.0" text="Type of Transaction">
-                     <font>
-                        <Font size="13.0" />
-                     </font>
-                  </Label>
-                  <DatePicker prefHeight="17.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Label text="Description" GridPane.rowIndex="3">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Label text="Number of weeks" GridPane.rowIndex="2" />
-                  <Label text="Date" GridPane.rowIndex="1" />
-               </children>
-            </GridPane>
-         </right>
-      </BorderPane>
-      <ButtonBar prefHeight="0.0" prefWidth="640.0">
-        <buttons>
-          <Button mnemonicParsing="false" text="Save" />
-            <Button mnemonicParsing="false" text="&lt;Back" />
-        </buttons>
-      </ButtonBar>
+      <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="628.0" prefWidth="898.0">
+         <children>
+            <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <top>
+                  <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="18.0" prefWidth="86.0" text="Add Transaction" BorderPane.alignment="CENTER" />
+               </top>
+               <center>
+                  <GridPane maxWidth="1.7976931348623157E308" prefHeight="338.0" prefWidth="640.0" BorderPane.alignment="CENTER">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <RadioButton mnemonicParsing="false" text="Programmed Transaction" GridPane.columnIndex="1" />
+                        <RadioButton mnemonicParsing="false" text="Instant Transaction" GridPane.columnIndex="2" />
+                        <Label prefHeight="18.0" prefWidth="152.0" text="Type of Transaction">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Label>
+                        <DatePicker prefHeight="17.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label text="Description" GridPane.rowIndex="3">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Number of weeks" GridPane.rowIndex="2" />
+                        <Label text="Date" GridPane.rowIndex="1" />
+                     </children>
+                  </GridPane>
+               </center>
+               <bottom>
+                  <ButtonBar prefHeight="0.0" prefWidth="640.0" BorderPane.alignment="CENTER">
+                    <buttons>
+                      <Button mnemonicParsing="false" text="Save" />
+                        <Button mnemonicParsing="false" text="&lt;Back" />
+                    </buttons>
+                  </ButtonBar>
+               </bottom>
+            </BorderPane>
+         </children>
+      </AnchorPane>
    </children>
 </VBox>
