--- a/src/main/resources/FXMLHome.fxml
+++ b/src/main/resources/FXMLHome.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -104,12 +105,12 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="314.0" prefWidth="640.0">
                            <children>
-                              <TableView layoutX="-3.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="297.0" prefWidth="670.0">
+                              <TableView fx:id="transTable" layoutX="-3.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="297.0" prefWidth="670.0">
                                  <columns>
-                                    <TableColumn prefWidth="75.0" text="ID" />
-                                    <TableColumn prefWidth="75.0" text="Amount" />
-                                    <TableColumn prefWidth="156.0" text="Number Of Movement" />
-                                    <TableColumn minWidth="0.0" prefWidth="64.79998779296875" text="Date" />
+                                    <TableColumn fx:id="transIDColumn" prefWidth="75.0" text="ID" />
+                                    <TableColumn fx:id="transAmountColumn" prefWidth="75.0" text="Amount" />
+                                    <TableColumn fx:id="transNumMovColumn" prefWidth="156.0" text="Number Of Movement" />
+                                    <TableColumn fx:id="transDateColumn" minWidth="0.0" prefWidth="64.79998779296875" text="Date" />
                                  </columns>
                               </TableView>
                               <ButtonBar layoutX="-2.0" layoutY="298.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="47.0" prefWidth="640.0">
@@ -118,7 +119,7 @@
                                   <Button minWidth="42.0" mnemonicParsing="false" onAction="#addMovement" prefHeight="26.0" text="Add Movement" />
                                     <Button mnemonicParsing="false" text="Remove" />
                                     <Button mnemonicParsing="false" text="Modify" />
-                                    <Button mnemonicParsing="false" text="Add Transaction" />
+                                    <Button mnemonicParsing="false" onAction="#addTransaction" text="Add Transaction" />
                                 </buttons>
                               </ButtonBar>
                            </children>
@@ -155,6 +156,7 @@
                                     <Insets />
                                  </opaqueInsets>
                               </GridPane>
+                              <Label fx:id="FailedOperationTag" layoutX="14.0" layoutY="29.0" prefHeight="18.0" prefWidth="388.0" textFill="RED" />
                            </children>
                         </AnchorPane>
                      </content>
