--- a/src/main/resources/FXMLAddTransaction.fxml
+++ b/src/main/resources/FXMLAddTransaction.fxml
@@ -69,7 +69,7 @@
                      <bottom>
                         <ButtonBar prefHeight="0.0" prefWidth="640.0" BorderPane.alignment="CENTER">
                           <buttons>
-                            <Button mnemonicParsing="false" onAction="#saveNewTransaction" text="Save" />
+                            <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveNewTransaction" text="Save" />
                               <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonAction" text="&lt;Back" />
                           </buttons>
                         </ButtonBar>
