--- a/src/main/resources/FXMLAddMovement.fxml
+++ b/src/main/resources/FXMLAddMovement.fxml
@@ -9,6 +9,8 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -27,7 +29,7 @@
                <center>
                   <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                      <children>
-                        <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="210.0" prefWidth="642.0">
+                        <GridPane layoutX="7.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="210.0" prefWidth="642.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -85,12 +87,22 @@
                <items>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                      <children>
-                        <Button layoutX="93.0" layoutY="29.0" mnemonicParsing="false" onAction="#addTag" text="Button" />
+                        <Button layoutX="78.0" layoutY="-3.0" mnemonicParsing="false" onAction="#addTag" prefHeight="86.0" prefWidth="110.0" />
+                        <ImageView fitHeight="81.0" fitWidth="113.0" layoutX="77.0">
+                           <image>
+                              <Image url="@freccia.png" />
+                           </image>
+                        </ImageView>
                      </children>
                   </AnchorPane>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                      <children>
-                        <Button layoutX="93.0" layoutY="29.0" mnemonicParsing="false" onAction="#leaveTag" text="Button" />
+                        <Button layoutX="79.0" layoutY="-3.0" mnemonicParsing="false" onAction="#addTag" prefHeight="86.0" prefWidth="110.0" />
+                        <ImageView fitHeight="81.0" fitWidth="113.0" layoutX="78.0" layoutY="-1.0" nodeOrientation="RIGHT_TO_LEFT">
+                           <image>
+                              <Image url="@freccia.png" />
+                           </image>
+                        </ImageView>
                      </children>
                   </AnchorPane>
                </items>
